// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test sobre el componente <GifExpertApp/> Debe de coincidir con el snapshot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category=""
      key=""
    />
  </ol>
</Fragment>
`;

exports[`test sobre el componente <GifExpertApp/> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="One punch"
      key="One punch"
    />
    <GifGrid
      category="DBZ"
      key="DBZ"
    />
  </ol>
</Fragment>
`;
